create route for datasets

--- a/public/elements/views/datasets-view.html
+++ b/public/elements/views/datasets-view.html
@@ -6,7 +6,7 @@
 
 <dom-module id="datasets-view">
   <template>
-    <px-card id="myCard" header-text="About this application">
+    <px-card id="myCard" header-text="Download training and test datasets">
       <style is="custom-style">
         div.markdown-html > h2 {
           margin-top: 0;
