change id of datasets

--- a/public/elements/views/datasets-view.html
+++ b/public/elements/views/datasets-view.html
@@ -13,7 +13,7 @@
         }
       </style>
       <div>
-        <marked-element id="aboutContentMarkdown" markdown="">
+        <marked-element id="datasetsContentMarkdown" markdown="">
           <div class="markdown-html"></div>
         </marked-element>      </div>
     </px-card>
@@ -29,7 +29,7 @@
 
         this.$.aboutContentAjaxEl.addEventListener('response', function(evt) {
           console.log(evt.detail);
-          that.$.aboutContentMarkdown.markdown = evt.detail.response;
+          that.$.datasetsContentMarkdown.markdown = evt.detail.response;
         });
         this.$.aboutContentAjaxEl.generateRequest();
       }
