--- a/public/elements/views/datasets-view.html
+++ b/public/elements/views/datasets-view.html
@@ -1,13 +1,7 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/px-view-header/px-view-header.html">
-<link rel="import" href="../../bower_components/px-card/px-card.html">
-<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="../../bower_components/marked-element/marked-element.html">
-
 <dom-module id="datasets-view">
   <template>
     <px-card id="dataCard" header-text="Download training and test datasets">
-      <style is="custom-style">
+      <style is="datasets-style">
         div.markdown-html > h2 {
           margin-top: 0;
         }
