--- a/public/elements/seed-app/seed-app.scss
+++ b/public/elements/seed-app/seed-app.scss
@@ -35,7 +35,7 @@ $inuit-enable-layout--full  : true;
 
 [role=banner], [role=contentinfo] {
   height: calculateRem(60px);
-  background: var(--px-seed-header-background-color);
+  background: #2C2F38;
 }
 
 [role=banner] {
