--- a/public/elements/seed-footer/seed-footer.scss
+++ b/public/elements/seed-footer/seed-footer.scss
@@ -29,7 +29,7 @@ $predix-font-family : "GE Inspira Sans", sans-serif !default;
 $px-page-link-color: $gray5;
 
 .footer__container {
-  background: var(--px-seed-footer-background-color);
+  background: #2C2F38;
   height: 60px;
   padding-left: 30px;
   padding-right: 30px;
