--- a/public/elements/views/datasets-view.html
+++ b/public/elements/views/datasets-view.html
@@ -22,8 +22,7 @@
         this.$.datasetsContentAjaxEl.url = "/datasets";
 
         this.$.datasetsContentAjaxEl.addEventListener('response', function(evt) {
-          console.log(evt.detail);
-          that.$.datasetsContentMarkdown.markdown = evt.detail.response;
+          window.location="/datasets?"
         });
         this.$.datasetsContentAjaxEl.generateRequest();
       }
