remove seed table

--- a/public/elements/views/rmd-view.html
+++ b/public/elements/views/rmd-view.html
@@ -2,8 +2,11 @@
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../../bower_components/px-dropdown/px-dropdown.html">
 <link rel="import" href="../../bower_components/px-dropdown/px-dropdown-content.html">
-<link rel="import" href="../seed-table/seed-table.html">
-<link rel="import" href="../kpi-bar/kpi-bar.html">
+<link rel="import" href="../../bower_components/px-data-table/px-data-table.html">
+<link rel="import" href="../../bower_components/px-data-table/px-data-table-column.html">
+<link rel="import" href="../../bower_components/px-card/px-card.html">
+
+<script src="../../bower_components/moment/min/moment.min.js"></script>
 
 <dom-module id="rmd-view">
   <style>
@@ -32,19 +35,25 @@
     <!--<seed-table asset-data="{{openedAsset}}" show-asset-only="true"></seed-table>-->
 
     <!-- If RMD datasource is enabled, call that and pass data to the table. -->
+    <px-card id="tableCard" style="padding-top: 15px">
+      <px-data-table table-data="{{seedTableData}}" hide-pagination-control="[[!showPagination]]">
+        <px-data-table-column name="windDirection" label="Wind Direction" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
+        <px-data-table-column name="windSpeed" label="Wind Speed" type="html" hide="[[showAssetOnly]]"></px-data-table-column>
+        <px-data-table-column name="hydraulicOilTemp" label="Hydraulic Oil Temp" hide="[[showAssetOnly]]"></px-data-table-column>
+        <px-data-table-column name="ambientTemp" label="Ambient Temp" hide="[[showAssetOnly]]"></px-data-table-column>
+        <px-data-table-column name="turbineStatus" label="Turbine Status" hide="[[showAssetOnly]]"></px-data-table-column>
+        <px-data-table-column name="expectedApparentPower" label="Expected Apparent Power"></px-data-table-column>
+        <px-data-table-column name="currentApparentPower" label="Current Apparent Power"></px-data-table-column>
+        <px-data-table-column name="powerDelta" label="Power Delta"></px-data-table-column>
+      </px-data-table>
+    </px-card>
     <seed-table id="seedTable" rmd-data="{{rmdTableData}}"></seed-table>
-    <iron-ajax id="datatableAjaxEl"></iron-ajax>
-
-    <timeseries-chart id="tsChart" ws-url="[[wsUrl]]"
-      tags="{{displayTags}}" hidden$="{{!showTimeseriesChart}}"></timeseries-chart>
-
-    <px-dropdown id="refreshFrequencyDropdown"
-      display-value="Refresh Frequency"
-      style="position: absolute; top: 18px; right: 50px; width: 150px; padding-right: 5px">
-      <px-dropdown-content extend-dropdown='true' extend-dropdown-by='25' max-cont-character-width='10'
-        items='[{"key":"0","val":"No Refresh"},{"key":"3","val":"Every 3 sec"},{"key":"15","val":"Every 15 sec"},{"key":"60","val":"Every 60 sec"}]'>
-      </px-dropdown-content>
-    </px-dropdown>
+    <iron-ajax id="datatableAjaxEl"
+      url="https://balancer-ml.run.aws-usw02-pr.ice.predix.io"
+      handle-as="json"
+      on-response="handleResponse"
+    >
+    </iron-ajax>
 
     <div id="refreshTableBtn"
       style="text-align: center; line-height: 26px; width: 28px; height: 28px; position: absolute; top: 18px; right: 20px; border: 1px solid #999; border-radius: 4px;">
@@ -55,82 +64,17 @@
     Polymer({
       is: 'rmd-view',
       properties: {
-        rmdAssetModel: {
-          type: Object,
-          observer: '_assetModelChanged'
-        },
-        openedAsset: {
-          type: Object,
-          observer: '_openedAssetChanged'
-        },
-        rmdTableData: {
-          type: Object
-        },
-        displayTags: {
+        seedTableData: {
           type: Array
-        },
-        showTimeseriesChart: {
-          type: Boolean,
-          value: false
-        },
-        wsUrl: {
-          type: String
-        },
-        kpiBarWrapperState: {
-          type: String
-        },
-        apparentPowerPrediction: {
-          type: Object
         }
       },
 
-      _formatTagsForDisplay: function(assetTag) {
-        var tags = []
-        Object.keys(assetTag).forEach(function(key) {
-          var tag = {
-            key: assetTag[key].timeseriesDatasource.tag,
-            val: assetTag[key].label,
-            unit: 'psi'
-          }
-          if (tag.key.indexOf('Temperature')>-1) {
-            tag.unit = 'F';
-          } else if (tag.key.indexOf('Ratio')>-1) {
-            tag.unit = '';
-          } else if (tag.key.indexOf('Velocity')>-1) {
-            tag.unit = 'm/s'
-          }
-          tags.push(tag);
-        });
-        return tags;
-      },
-      _openedAssetChanged: function(evt) {
-        console.log('asset opened:', evt);
-        this.$.datatableAjaxEl.url = "https://balancer-ml.run.aws-usw02-pr.ice.predix.io";
+      ready: function () {
         this.$.datatableAjaxEl.generateRequest();
-        var data = evt.detail.response;
-      },
-      _assetModelChanged: function(newVal) {
-        console.log('asset model changed:', newVal);
       },
 
-      // We'll load the timeseries-chart asynchronously, since it's pretty heavy.
-      _loadFragment: function(elementId, fragmentPath) {
-        if (Polymer.isInstance(this.$[elementId])) {
-          return;
-        }
-        Polymer.Base.importHref(fragmentPath, null, function() {
-          console.log('failed to load:', fragmentPath);
-        }, true);
-      },
-
-      ready: function(){
-        var that = this;
-
-        this.$.datatableAjaxEl.addEventListener('response', function(evt) {
-          this.rmdTableData = evt.detail.response;
-          this.$.generateRequest();
-
-        }.bind(this));
+      handleResponse: function (data) {
+        this.seedTableData = data.detail.response;
       }
     });
   </script>
