--- a/public/elements/views/rmd-view.html
+++ b/public/elements/views/rmd-view.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/byutv-jsonp/byutv-jsonp.html">
 <link rel="import" href="../../bower_components/px-dropdown/px-dropdown.html">
 <link rel="import" href="../../bower_components/px-dropdown/px-dropdown-content.html">
 <link rel="import" href="../../bower_components/px-data-table/px-data-table.html">
@@ -16,21 +16,6 @@
   }
   </style>
   <template>
-    <asset-browser id="assetBrowser"
-      asset-model="{{rmdAssetModel}}"
-      opened-asset="{{openedAsset}}"
-      asset-query-url="/api/predix-asset/asset"
-      asset-group-query-url="/api/predix-asset/group">
-    </asset-browser>
-
-    <kpi-bar datapoints="[[kpiDatapoints]]"
-      overall-label="[[kpiOverallLabel]]"
-      overall-value="[[kpiOverallValue]]"
-      overall-max="[[kpiOverallMax]]"
-      kpi-bar-wrapper-state="[[kpiBarWrapperState]]">
-    </kpi-bar>
-    <iron-ajax id="kpiBarAjaxEl"></iron-ajax>
-
     <!-- If the RMD datasource is not enabled, you can pass in an asset directly. -->
     <!--<seed-table asset-data="{{openedAsset}}" show-asset-only="true"></seed-table>-->
 
@@ -48,12 +33,12 @@
       </px-data-table>
     </px-card>
     <seed-table id="seedTable" rmd-data="{{rmdTableData}}"></seed-table>
-    <iron-ajax id="datatableAjaxEl"
+    <byutv-jsonp id="datatableAjaxEl"
       url="https://balancer-ml.run.aws-usw02-pr.ice.predix.io"
       handle-as="json"
       on-response="handleResponse"
     >
-    </iron-ajax>
+    </byutv-jsonp>
 
     <div id="refreshTableBtn"
       style="text-align: center; line-height: 26px; width: 28px; height: 28px; position: absolute; top: 18px; right: 20px; border: 1px solid #999; border-radius: 4px;">
